--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import "assets/p-float-label";
+@import "assets/scss/p-float-label";
+@import "assets/scss/p-calendar";
+@import "assets/scss/p-button-label";
+@import "assets/scss/global-styles";
+@import "assets/scss/task-card";
 
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
+
+
+@import "primeicons/primeicons.css";
+
+
