--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,18 @@
-<p-button
-    label="Add Task"
-    icon="pi pi-plus"
+<div class="header">
+    <p-button
+    class = "add-task-name"
+    label = "Add Task"
+    icon = "pi pi-plus"
     (click)="showTaskDialog()"
-></p-button>
+></p-button></div>
+<div class="tasks-body">
+    <div class="open-tasks">
+        <app-task-list [tasks]="openTasks"></app-task-list>
+    </div>
+    <div class="in-progress-tasks">
+        <app-task-list [tasks]="inProgressTasks"></app-task-list>
+    </div>
+    <div class="complete-tasks">
+        <app-task-list [tasks]="completeTasks"></app-task-list>
+    </div>
+</div>
