simplified ui and implemented editing tasks

--- a/src/app/add-task-dialog/add-task-dialog.component.scss
+++ b/src/app/add-task-dialog/add-task-dialog.component.scss
@@ -1,30 +1,98 @@
-.container {
-    display:flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: start;
-}
+.task-card {
+  border-radius: 8px;
+  margin: 24px;
+  display: flex;
+  opacity: 0;
+  transform: scale(0.5);
+  animation: popIn 0.5s ease-out forwards;
 
-.p-dialog-footer {
+  .task-header {
+    color: rgb(36, 34, 34);
+    font-weight: bold;
+    border-radius: 8px;
+    font-size: 1.2rem;
     display: flex;
-    flex-direction: row;
-    justify-content: end;
+    align-items: start;
+    justify-content: space-between;
+
+    .task-actions {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  }
+
+  .task-details {
+    margin-top: 12px;
+    margin-bottom: 16px;
+
+    p {
+      margin: 4px 0;
+    }
+  }
+
+  .p-card-footer {
     margin-top: 16px;
-    position: sticky;
-    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
-.error-message {
-    margin-top: -16px;
-    font-size: small;
-    color: #dc3545;
+.p-button-info {
+  color: white;
+  margin-right: 24px;
 }
 
-.p-button-secondary {
-    margin-top: 16px;
-    margin-right: 24px;
+.p-button-danger {
+  background-color: #d9534f;
+  border-color: #d9534f;
+  color: white;
+
+  &:hover {
+    background-color: #c9302c;
+    border-color: #c9302c;
   }
-  
-.p-button-primary {
-    margin-top: 16px;
+}
+
+.priority {
+  border-radius: 12px;
+  padding: 2px 8px;
+  border: 1px solid;
+  margin-top: 8px;
+
+  &.p-0-task {
+    border-color: #f5c0c3;
+    background-color: #fce9ea;
+    color: #da1e28;
   }
+
+  &.p-1-task {
+    color: #556ef2;
+    border-color: #d9def8;
+    background-color: #eef1fe;
+  }
+
+  &.p-2-task {
+    color: #24a148;
+    border-color: #d9ebe1;
+    background-color: #e9f6ed;
+  }
+}
+
+.due-date {
+  margin-bottom: 8px;
+  margin-top: 8px;
+  font-family: serif;
+  font-size: large;
+}
+
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
