--- a/src/assets/scss/_task-dialog.scss
+++ b/src/assets/scss/_task-dialog.scss
@@ -1,22 +1,22 @@
-.p-inputtext {
-    &.task-name-input {
-        display: flex;
-        flex: 1;
-    }
-}
+// .p-inputtext {
+//     &.task-name-input {
+//         display: flex;
+//         flex: 1;
+//     }
+// }
 
-.p-dialog-content {
-    padding-bottom: 0;
+// .p-dialog-content {
+//     padding-bottom: 0;
 
-    .p-dialog-footer {
-        padding: 16px 0;
+//     .p-dialog-footer {
+//         padding: 16px 0;
 
-        .p-element {
-            margin-right: 0;
-        }
+//         .p-element {
+//             margin-right: 0;
+//         }
 
-        .p-button-secondary {
-            margin-right: 16px;
-        }
-    }
-}
+//         .p-button-secondary {
+//             margin-right: 16px;
+//         }
+//     }
+// }
