--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -1,9 +1,21 @@
 .p-inputtext {
-    &.task-name-input {
-      display: flex;
-      flex: 1;
-    }
+  &.task-name-input {
+    display: flex;
+    flex: 1;
   }
-  .p-dialog-content {
-    padding: 0 24px;
-  }
+}
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
+.mt-4 {
+  margin-top: 4px !important;
+}
+
+.p-card-body {
+  width: 100%;
+}
+
+.p-card {
+  box-shadow: none;
+}
