--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,8 @@
 @import "assets/scss/task-card";
 
 
-
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 
 
