--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -7,7 +7,7 @@
     <span>{{ task.name }}</span>
     <span class="task-actions">
       <p-button icon="pi pi-pencil" (click)="onEditTask(task)"></p-button>
-      <p-button icon="pi pi-trash" class="mt-4"></p-button>
+      <p-button icon="pi pi-trash" class="mt-4" (click)="onDeleteTask(task)"></p-button>
     </span>
   </div>
   <div class="task-details">  
