--- a/src/app/add-task-dialog/add-task-dialog.component.scss
+++ b/src/app/add-task-dialog/add-task-dialog.component.scss
@@ -96,3 +96,9 @@
     transform: scale(1);
   }
 }
+
+.error-message {
+    color: rgb(239, 115, 115);
+    font-size: 16px;
+    margin-top: -16px;
+  };
